@@ -1,5 +1,7 @@
 *SVN*
 
+* Fix synchronization issue with Gateway initialization [Doug Barth]
+
 * Added opt-in "compat" and "upgrade" recipes for tasks to aid in the upgrade process to Capistrano 2 [Jamis Buck]
 
 * The deployment recipes are now opt-in. Just do 'load "deploy"' in your recipe script. [Jamis Buck]
